--- a/index.html
+++ b/index.html
@@ -9,7 +9,56 @@
 </head>
 
 <body>
+    <nav>
+        <header>
+            <div class="logo-icon"></div>
+        </header>
 
+        <section class="nav-container">
+            <a class="nav-item">Home</a>
+            <a class="nav-item">Our Package</a>
+            <a class="nav-item">Call us</a>
+        </section>
+    </nav>
+
+    <main>
+        <article class="main-title">
+            <header>
+                <h1>Your Trusted Travel Agent</h1>
+            </header>
+
+            <p>Your happiness is our happiness.</p>
+        </article>
+
+        <section class="main-content">
+            <article class="main-content-item">
+                <div class="main-banner-container">
+                    <div class="main-content-banner banner-1">
+                    </div>
+                    <div class="main-content-banner banner-2">
+                    </div>
+                    <div class="main-content-banner banner-3">
+                    </div>
+                </div>
+
+                <div class="main-item">
+                    <div class="item-icon"></div>
+
+                    <div>
+                        <h3>Lorem Ipsum Dolor</h3>
+                        <p>Lorem Ipsum Dolor</p>
+                    </div>
+                </div>
+            </article>
+
+            <form class="main-content-item">
+                <input type="text" id="input-name" placeholder="Name" />
+                <button type="button" onclick="formValidation();">Submit</button>
+            </form>
+        </section>
+    </main>
+
+    <script src="js\script.js"></script>
 </body>
 
 </html>
